# ControllerModeMonitor

./: .gitignore  AudioController.cpp  AudioController.h  CMakeLists.txt  CMakePresets.json  ControllerModeMonitor.aps  ControllerModeMonitor.cpp  ControllerModeMonitor.rc  ControllerModeMonitor.sln  ControllerMonitor.cpp  ControllerMonitor.h  README.md  RokuAPI.cpp  RokuAPI.h  build_ico.ps1  readme.txt  resource.h  vcpkg.json
ControllerModeMonitor/: ControllerModeMonitor.cpp  ControllerModeMonitor.rc  ControllerModeMonitor.vcxproj  ControllerModeMonitor.vcxproj.filters  ControllerMonitor.cpp  resource.h
TV/: Roku.cpp  Roku.h  TV.h
src/: AudioController.cpp  AudioController.h  AudioDeviceManager.cpp  AudioDeviceManager.h  ControllerModeMonitor.cpp  ControllerModeMonitor.h  ControllerMonitor.cpp  ControllerMonitor.h  ModeManager.cpp  ModeManager.h  PolicyConfig.h  SteamStatus.cpp  SteamStatus.h  framework.h  resource.h
src/TV/: Roku.cpp  Roku.h  TV.h
